--- a/src/views/editors.css
+++ b/src/views/editors.css
@@ -8,18 +8,18 @@
 }
 .discovery-editor .CodeMirror {
     height: auto;
-    overflow-y: visible !important;
+    overflow-y: hidden !important;
     padding: 4px 8px;
     margin-bottom: 5px;
     font-family: Consolas, Monaco, monospace;
     font-size: 12px;
     border: 1px solid #aaa;
     border-radius: 3px;
-    box-shadow: inset 1px 1px 2px rgba(142, 142, 142, .2);
+    box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
 }
 .discovery-editor .CodeMirror-scroll {
     height: auto;
-    overflow-y: visible !important;
+    overflow-y: hidden !important;
     cursor: text;
 }
 .discovery-editor .CodeMirror-focused {
