--- a/src/views/table.css
+++ b/src/views/table.css
@@ -8,11 +8,28 @@
     padding: 2px 8px;
     font-weight: normal;
     text-align: left;
-    background: #eee;
+    background: #eee no-repeat right 2px center;
+    background-size: 14px;
     /*text-transform: capitalize;*/
     border: 1px solid white;
     border-width: 1px 1px 1px 0;
 }
 .view-table > thead > th:last-child {
     border-right-color: #eee;
+}
+.view-table > thead > th.sortable {
+    padding-right: 16px;
+    background-image: url('./table-sortable.svg');
+    cursor: pointer;
+}
+.view-table > thead > th.sortable.asc {
+    background-image: url('./table-sort-asc.svg');
+    background-size: 12px;
+}
+.view-table > thead > th.sortable.desc {
+    background-image: url('./table-sort-desc.svg');
+    background-size: 12px;
+}
+.view-table > thead > th.sortable:hover {
+    background-color: #ddd;
 }
