Improve error handling in query editor

--- a/src/pages/report/editor-common.css
+++ b/src/pages/report/editor-common.css
@@ -69,6 +69,11 @@
     font-size: 12px;
 }
 
+.page-report > .report-editor .discovery-editor-error {
+    border-bottom: 1px solid rgba(255, 0, 0, .6);
+    background: rgba(255, 215, 209, 0.3);
+}
+
 .page-report > .report-editor textarea {
     padding: 8px;
     width: 100%;
