Use JSON5 to parse config in view editor

--- a/src/pages/report/editor-common.css
+++ b/src/pages/report/editor-common.css
@@ -5,7 +5,7 @@
 .page-report > .report-block > .report-block-editor .discovery-editor {
     background: white;
 }
-.page-report > .report-editor .discovery-editor-error {
+.page-report > .report-block > .report-block-editor .discovery-editor-error {
     border-bottom: 1px solid rgba(255, 0, 0, .6);
     background: rgba(255, 215, 209, 0.3);
 }
