--- a/src/app/app.css
+++ b/src/app/app.css
@@ -14,7 +14,7 @@
     overflow: auto;
     font-size: 14px;
 }
-.discovery > .loading-overlay.done {
+.discovery > .loading-overlay.done:not(.error) {
     opacity: 0;
     visibility: hidden;
     transition: all .2s;
