Add markdown editor

--- a/src/pages/report.css
+++ b/src/pages/report.css
@@ -1,6 +1,7 @@
 @import url('./report/header.css');
 @import url('./report/block.css');
 @import url('./report/editor-common.css');
+@import url('./report/editor-markdown.css');
 @import url('./report/editor-view.css');
 
 .page-report {
