--- a/src/views/button.css
+++ b/src/views/button.css
@@ -22,7 +22,8 @@
     width: 0;
     visibility: hidden;
 }
-.view-button:hover {
+.view-button:hover,
+.view-button.discovery-view-popup-active {
     background-color: #f5f5f5;
     border-color: #cccccc;
 }
@@ -44,7 +45,8 @@
     border: none;
     color: white;
 }
-.view-button-primary:hover {
+.view-button-primary:hover,
+.view-button-primary.discovery-view-popup-active {
     background-color: #009cf0;
 }
 .view-button-primary:active {
@@ -56,7 +58,8 @@
     border: none;
     color: white;
 }
-.view-button-danger:hover {
+.view-button-danger:hover,
+.view-button-danger.discovery-view-popup-active {
     background-color: #f05456;
 }
 .view-button-danger:active {
@@ -68,7 +71,8 @@
     border: none;
     color: rgba(0, 0, 0, .84);
 }
-.view-button-warning:hover {
+.view-button-warning:hover,
+.view-button-warning.discovery-view-popup-active {
     background-color: #fcbd00;
 }
 .view-button-warning:active {
