--- a/src/views/menu-item.css
+++ b/src/views/menu-item.css
@@ -1,20 +1,27 @@
 .view-menu-item {
+    display: block;
     padding: 4px 12px;
+    color: inherit;
+    text-decoration: none;
     cursor: pointer;
 }
 .view-menu-item:empty::before {
     content: '|';
     visibility: hidden;
 }
-.view-menu-item:hover {
+.view-menu-item:hover,
+.view-menu-item.discovery-view-popup-active {
     background: #e0e0e0;
 }
 .view-menu-item.selected {
     background: #c6dee7;
     cursor: default;
 }
-.view-menu-item.disabled {
+.view-menu-item[disabled] {
     opacity: .65;
     background: none;
+    pointer-events: none;
+}
+.view-menu-item:not(.onclick):not([href]) {
     pointer-events: none;
 }
