--- a/src/views/tab.css
+++ b/src/views/tab.css
@@ -8,7 +8,6 @@
     cursor: pointer;
     white-space: nowrap;
 }
-
 .view-tab.active {
     position: relative;
     z-index: 10;
@@ -17,4 +16,11 @@
     border-color: #ddd;
     background: white;
     cursor: default;
+}
+.view-tab.disabled {
+    color: #aaa;
+}
+.view-tab.disabled,
+.view-tab:not(.onclick) {
+    pointer-events: none;
 }
