--- a/src/views/menu-item.css
+++ b/src/views/menu-item.css
@@ -17,7 +17,7 @@
     background: #c6dee7;
     cursor: default;
 }
-.view-menu-item[disabled] {
+.view-menu-item.disabled {
     opacity: .65;
     background: none;
     pointer-events: none;
