Rework widget navigation panel

--- a/src/views/index.css
+++ b/src/views/index.css
@@ -18,6 +18,7 @@
 @import url('./lists.css');
 @import url('./menu-item.css');
 @import url('./menu.css');
+@import url('./nav-button.css');
 @import url('./popup.css');
 @import url('./section.css');
 @import url('./select.css');
