--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -82,20 +82,11 @@
     overflow: hidden;
     user-select: none;
 }
-.discovery-content-badges > .badge {
-    float: left;
-    font-size: 12px;
-    color: #444;
-    background: #f0f0f0;
-    padding: 5px 15px 6px;
-    cursor: pointer;
-}
-.discovery-content-badges > .badge:not([hidden]) ~ .badge:not([hidden]) {
-    border-left: 1px solid #ddd;
-}
-.discovery-content-badges > .badge:hover {
-    color: black;
-    background: #e0e0e0;
+.view-nav-button[data-name="burger"] {
+    background-image: url(hamburger-menu.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 18px;
 }
 
 .discovery[data-dzen] .discovery-sidebar,
