FIx views to not fail when no options in config adn return render result

--- a/src/views/index.css
+++ b/src/views/index.css
@@ -4,6 +4,7 @@
 @import url('./button.css');
 @import url('./checkbox-list.css');
 @import url('./checkbox.css');
+@import url('./column.css');
 @import url('./columns.css');
 @import url('./content-filter.css');
 @import url('./editors.css');
