--- a/src/pages/view-playground.css
+++ b/src/pages/view-playground.css
@@ -31,7 +31,33 @@
 
 .page-view-playground > .content {
     flex: 1;
-    padding: 0 20px;
+    padding: 10px 20px 20px;
     overflow: hidden;
     overflow-y: scroll;
+}
+
+.page-view-playground > .content .usage-render {
+    margin: 0 -20px 10px;
+    padding: 20px;
+    border: solid #eee;
+    border-width: 1px 0;
+}
+
+.page-view-playground > .content .view-tabs.usage-sources .view-tabs-buttons {
+    margin-left: 5px;
+}
+.page-view-playground > .content .view-tabs.usage-sources .view-tab:first-child {
+    margin-left: -10px;
+}
+.page-view-playground > .content .view-tabs.usage-sources .view-tabs-content {
+    overflow: visible;
+}
+.page-view-playground > .content .view-tabs.usage-sources .view-source {
+    margin-top: -1px;
+    border: 1px solid #ddd;
+    background: whitesmoke;
+    box-shadow: 0 0 0 2px white inset;
+}
+.page-view-playground > .content .view-tabs.usage-sources .view-source.first-tab {
+    border-top-left-radius: 0;
 }
