--- a/src/pages/view-playground.css
+++ b/src/pages/view-playground.css
@@ -1,11 +1,14 @@
 .page-view-playground {
     display: flex;
     flex-direction: row;
-    border: 1px solid #f0f0f0;
+    border: 1px solid #ddd;
     margin: 15px 0 0;
     padding: 0 !important;
     height: calc(100vh - 65px);
     box-sizing: border-box;
+    overflow: hidden;
+    border-radius: 3px;
+    background-color: rgba(255, 255, 255, .8);
 }
 
 .page-view-playground > .sidebar {
@@ -16,6 +19,14 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+}
+.page-view-playground > .sidebar .view-content-filter > .view-input {
+    margin: 0;
+}
+.page-view-playground > .sidebar .view-content-filter > .view-input input {
+    border: none;
+    border-bottom: 1px solid #eee;
+    border-radius: 0;
 }
 .page-view-playground > .sidebar .view-content-filter .view-block {
     flex: 1;
@@ -31,16 +42,19 @@
 
 .page-view-playground > .content {
     flex: 1;
-    padding: 10px 20px 20px;
+    padding: 20px;
     overflow: hidden;
     overflow-y: scroll;
 }
-
 .page-view-playground > .content .usage-render {
     margin: 0 -20px 10px;
     padding: 20px;
     border: solid #eee;
     border-width: 1px 0;
+}
+.page-view-playground > .content .usage-section > .view-h2 {
+    margin-top: 1.2em;
+    margin-bottom: .5em;
 }
 
 .page-view-playground > .content .view-tabs.usage-sources .view-tabs-buttons {
